[package]
name = "termcolors"
version = "0.2.2"
edition = "2021"
description = "Format text and display colors in the terminal."
repository = "https://github.com/ArielHorwitz/termcolors"
license = "Unlicense"
default-run = "printcolor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.4.18", features = ["derive"] }
